fin kc4j slides

--- a/ml/slides/slides.html
+++ b/ml/slides/slides.html
@@ -32,6 +32,11 @@
 					</p>
 				</section>
 
+				<section>
+					<img src="img/qrcode.png">
+					<br/>
+					<small>你也可以通过扫描二维码在手机上观看</small>
+				</section>
 
 				<section>
 					<section>
@@ -798,7 +803,8 @@
 
 					<section>
 						<h2>3.2 F1 评价指标与 ROC 曲线</h2>
-						<img src="img/roc-img.png">
+						<!-- <img src="img/roc-curve.png"> -->
+						<iframe data-src="chart/roc-curve.html" frameborder="no" border="0" marginwidth="0" marginheight="0" width="800" height="600"><img src="img/roc-img.png"></iframe>
 					</section>
 
 					<section>
